# NCSRecognition

./: .gitignore  CMakeLists.txt  README.md  makeDataTree.sh
include/: classifier.hpp  detector.hpp  face_align.hpp  face_detector.hpp  face_recognition.hpp  iclassifier.hpp  idetector.hpp  igpio.hpp  macros.hpp
pi/: CMakeLists.txt
pi/include/: classifier.hpp  classifier_factory.hpp  detector.hpp  ie.hpp  macros.h
pi/raspberry/: gpio.cpp  gpio.hpp  gpio_factory.cpp
pi/src/: CMakeLists.txt  CPPExample
pi/src/application/: core_executor.cpp  main.cpp
pi/src/example/: cpp_example.cpp
pi/src/include/: core_executor.hpp  face_aligner.hpp  face_detector.hpp  face_detectorDNN.hpp  face_detector_cascade.hpp  face_recognizer.hpp  ie_classifier.hpp  ie_facenet_v1.hpp  landmarks_detector.hpp  vino_net.hpp
pi/src/lib/: classifier_factory.cpp  face_aligner.cpp  face_detector.cpp  face_detectorDNN.cpp  face_detector_cascade.cpp  face_recognizer.cpp  factory.cpp  ie_classifier.cpp  ie_facenet_v1.cpp  landmarks_detector.cpp  vino_net.cpp
pi/src/lib/cpp/: ie_facenet_v1.cpp
pi/x86/: gpio.hpp  gpio_factory.cpp
py/: README.MD  config.py  main.py
src/: CMakeLists.txt  MAIN  face_align.cpp  face_detector.cpp  face_recognition.cpp  landmarks_detector.cpp  main.cpp  video_assistance.cpp
src/application/: core_executor.cpp  main.cpp
src/include/: core_executor.hpp  face_detector.hpp  face_detector_cascade.hpp  face_recognizer.hpp  firebase_interactor.hpp  timer.hpp  vino_net.hpp
src/include/data/: face_data.hpp  person_period_data.hpp
src/lib/: face_detector.cpp  face_detector_cascade.cpp  face_recognizer.cpp  factory.cpp  firebase_interactor.cpp  timer.cpp  vino_net.cpp
