INCLUDE_DIRECTORIES("../include") # BUILD HEADERS
INCLUDE_DIRECTORIES("${OpenCV_INCLUDE_DIRS}")
INCLUDE_DIRECTORIES("${EIGEN3_INCLUDE_DIRS}")
INCLUDE_DIRECTORIES("${IE_DIR}/include")

LINK_DIRECTORIES("${IE_DIR}/lib/armv7l")
LINK_DIRECTORIES("${IE_DIR}/lib/intel64")

SET(IE_SHARED_LIBS libinference_engine.so)

# MAKE LIBRARY
SET(SOURCES 
  face_align.cpp
  face_detector.cpp
  face_recognition.cpp
  landmarks_detector.cpp 
  video_assistance.cpp
)
ADD_LIBRARY(LIB SHARED ${SOURCES})
TARGET_LINK_LIBRARIES(LIB ${OpenCV_LIBS} ${IE_SHARED_LIBS} ${EIGEN3_INCLUDE_DIRS})

# MAKE MAIN 
SET(SOURCES main.cpp)
ADD_EXECUTABLE(NCSRecognition ${SOURCES})
TARGET_LINK_LIBRARIES(NCSRecognition LIB ${OpenCV_LIBS} ${IE_SHARED_LIBS} ${EIGEN3_INCLUDE_DIRS} "stdc++fs")

INSTALL (TARGETS LIB NCSRecognition
    DESTINATION ${PROJECT_SOURCE_DIR}/install/bin)
INSTALL (DIRECTORY ${PROJECT_SOURCE_DIR}/include
    DESTINATION ${PROJECT_SOURCE_DIR}/install)